--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-    <title>Discovering Structure</title>
+    <title>To-Dohism - A Conscious Life App</title>
   </head>
   <body>
     <div id="root"></div>
